--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,5 +1,6 @@
 {
 	"name": "Better TweetDeck",
+	"short_name": "BetterTDeck",
 	"version": "0.0.7",
 	"manifest_version": 2,
 	"description": "Improves the experience on web version of TweetDeck",
