--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,12 +1,12 @@
 {
 	"name": "Better TweetDeck",
 	"short_name": "BetterTDeck",
-	"version": "1.0.6.2",
+	"version": "1.0.7",
 	"manifest_version": 2,
 	"description": "Improves the user experience of TweetDeck on the web (http://tweetdeck.twitter.com)",
 	"content_scripts": [{
 		"matches": ["https://tweetdeck.twitter.com/*","http://tweetdeck.twitter.com/*"],
-		"js": ["jquery.ajax.min.js","content.js"],
+		"js": ["jquery.ajax.min.js","injectScript.js","content.js"],
 		"css": ["content.css"]
 		}],
 	"icons": { "16": "icon16.png",
