--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,7 +7,7 @@
 	"description": "__MSG_appDesc__",
 	"content_scripts": [{
 		"matches": ["https://tweetdeck.twitter.com/*","http://tweetdeck.twitter.com/*"],
-		"js": ["jquery.ajax.min.js","injectScript.js","content.js"],
+		"js": ["jquery.ajax.min.js","injectScript.js","content.js","emojiToImage.js"],
 		"css": ["content.css"]
 		}],
 	"icons": { "16": "icon16.png",
