--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Better TweetDeck",
+	"name": "__MSG_appName__",
 	"short_name": "BetterTDeck",
 	"default_locale":"en",
 	"version": "1.3.3",
