--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,8 +7,8 @@
 	"description": "__MSG_appDesc__",
 	"content_scripts": [{
 		"matches": ["https://tweetdeck.twitter.com/*","http://tweetdeck.twitter.com/*"],
-		"js": ["jquery.ajax.min.js","injectScript.js","content.js","emojiToImage.js"],
-		"css": ["content.css"]
+		"js": ["js/jquery.ajax.min.js","js/injectScript.js","js/content.js","js/emojiToImage.js","js/usefulFunctions.js"],
+		"css": ["content.css","emojis.css"]
 		}],
 	"icons": { "16": "icon16.png",
 	           "48": "icon48.png",
@@ -16,5 +16,6 @@
 	"permissions": ["storage"],
 	"options_page": "fancy-settings/source/index.html",
 	"background" : { "page": "background.html" },
-	"permissions": ["<all_urls>"]
+	"permissions": ["<all_urls>"],
+	"web_accessible_resources": ["font/*","emojis-s8bc023ba47.png","emojis2x-s1940453998.png"]
 }
