Revert "[Improvement] No more using <all_urls> as a permission in manifest (was it even useful at first ?)"
This reverts commit 980d70394175d71da062d038050204a87edab898.

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -16,5 +16,6 @@
 	"permissions": ["storage"],
 	"options_page": "fancy-settings/source/index.html",
 	"background" : { "page": "background.html" },
+	"permissions": ["<all_urls>"],
 	"web_accessible_resources": ["font/*","emojis-s8bc023ba47.png","emojis2x-s1940453998.png","emoji-pngs/emojis-inline/*","emoji-popover.html"]
 }
