[Feature] Added a "Settings" button in TweetDeck sidebar for quick access to the settings

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -37,5 +37,5 @@
 		"http://api.embed.ly/1/*",
 		"http://erambert.me/others/konamibtd/*"
 	],
-	"web_accessible_resources": ["font/*","emojis-s8bc023ba47.png","emojis2x-s1940453998.png","emoji-pngs/emojis-inline/*","emoji-popover.html"]
+	"web_accessible_resources": ["font/*","emojis-s8bc023ba47.png","emojis2x-s1940453998.png","emoji-pngs/emojis-inline/*","emoji-popover.html","fancy-settings/source/index.html"]
 }
