--- a/source/manifest.json
+++ b/source/manifest.json
@@ -35,7 +35,10 @@
 		"http://moby.to/*",
 		"http://soundcloud.com/*",
 		"http://api.embed.ly/1/*",
-		"http://erambert.me/others/konamibtd/*"
+		"http://erambert.me/others/konamibtd/*",
+		"https://tweetdeck.twitter.com/*",
+		"tabs",
+		"contextMenus"
 	],
 	"web_accessible_resources": ["font/*","emojis-s8bc023ba47.png","emojis2x-s1940453998.png","emoji-pngs/emojis-inline/*","emoji-popover.html","fancy-settings/source/index.html"]
 }
