--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.8.6",
     "gulp-concat": "^2.3.4",
+    "gulp-include": "^0.2.3",
     "gulp-minify-css": "^0.3.7",
     "gulp-uglify": "^0.3.1"
   }
