--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,7 +6,7 @@
 	"description": "Yolo",
 	"content_scripts": [{
 		"matches": ["https://tweetdeck.twitter.com/*","http://tweetdeck.twitter.com/*"],
-		"js": ["js/BTD.js"],
+		"js": ["js/injectScript.js","js/handlebars.js","js/BTD.js"],
 		"css": ["styles/content.css"]
 		}],
 	"icons": { "16": "icons/icon16.png",
