--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-include": "^0.2.3",
     "gulp-minify-css": "^0.3.7",
     "gulp-sass": "^0.7.2",
-    "gulp-uglify": "^0.3.1"
+    "gulp-uglify": "^0.3.1",
+    "jake": "^8.0.1"
   }
 }
