--- a/source/manifest.json
+++ b/source/manifest.json
@@ -12,6 +12,7 @@
 	"icons": { "16": "icons/icon16.png",
 	           "48": "icons/icon48.png",
 	          "128": "icons/icon128.png" },
+    "background" : { "page": "background.html" },
 	"permissions": [
 		"storage",
 		"https://images4-focus-opensocial.googleusercontent.com/*",
