Re-added the « Options » button directly in the TD UI

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -41,5 +41,5 @@
 		"contextMenus",
 		"http://api.dribbble.com/*"
 	],
-	"web_accessible_resources": ["font/*","emojis/emojis-s8bc023ba47.png","emojis/emojis2x-s1940453998.png","emojis/emoji-popover.html"]
+	"web_accessible_resources": ["font/*","emojis/emojis-s8bc023ba47.png","emojis/emojis2x-s1940453998.png","emojis/emoji-popover.html", "options/options.html"]
 }
