--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,47 +1,19 @@
 {
-	"name": "__MSG_appName__",
-	"short_name": "BetterTDeck",
-	"default_locale": "en",
-	"version": "2.1.2",
+	"name": "BetterTweetDeck³",
+	"short_name": "BTD³",
+	// "default_locale": "en",
+	"version": "3.0.0",
 	"manifest_version": 2,
-	"description": "__MSG_appDesc__",
+	"description": "ᕕ( ᐛ )ᕗ",
 	"content_scripts": [{
 		"matches": ["https://tweetdeck.twitter.com/*","http://tweetdeck.twitter.com/*"],
-		"js": ["js/libs.js","js/BTD.js"],
-		"css": ["styles/content.css"]
+		"js": ["js/content.js"]
 		}],
 	"icons": { "16": "icons/icon16.png",
 	           "48": "icons/icon48.png",
 	          "128": "icons/icon128.png" },
-    "background" : { "page": "background.html" },
-    "options_page": "options/options.html",
 	"permissions": [
-		"storage",
-		"https://images4-focus-opensocial.googleusercontent.com/*",
-		"https://noembed.com/*",
-		"http://api.imgur.com/*",
-		"http://cl.ly/*",
-		"https://cl.ly/*",
-		"http://d.pr/*",
-		"https://api.instagram.com/*",
-		"http://instagr.am/p/*",
-		"https://www.flickr.com/services/oembed/*",
-		"https://api.500px.com/*",
-		"https://*.media.tumblr.com/*",
-		"https://vimeo.com/api/*",
-		"https://api.dailymotion.com/*",
-		"https://backend.deviantart.com/*",
-		"http://img.ly/show/*",
-		"http://yfrog.com/*",
-		"http://moby.to/*",
-		"https://soundcloud.com/*",
-		"https://api.embed.ly/1/*",
-		"http://erambert.me/*",
-		"https://tweetdeck.twitter.com/*",
-		"tabs",
-		"contextMenus",
-		"https://api.dribbble.com/*"
 	],
-	"web_accessible_resources": ["font/*","emojis/emojis-s8bc023ba47.png","emojis/emojis2x-s1940453998.png","emojis/emoji-popover.html", "options/options.html", "tweet.json"],
+	"web_accessible_resources": ["js/inject.js"],
 	"content_security_policy": "img-src 'self' *; default-src; unsafe-inline;"
 }
