--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "BetterTweetdeck",
-  "version": "2.0.0",
+  "name": "BetterTweetDeck",
+  "version": "3.0.0",
   "description": "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
   "repository": {
     "type": "git",
@@ -13,12 +13,14 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
-    "gulp": "^3.8.6",
-    "gulp-concat": "^2.3.4",
-    "gulp-include": "^0.2.3",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-sass": "^0.7.2",
-    "gulp-uglify": "^0.3.1",
-    "jake": "^8.0.1"
+    "babel-core": "^5.8.22",
+    "babelify": "^6.2.0",
+    "browserify": "^11.0.1",
+    "del": "^1.2.1",
+    "run-sequence": "^1.1.2",
+    "vinyl-source-stream": "^1.1.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1",
+    "gulp-sourcemaps": "^1.5.2"
   }
 }
