--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
-    "babel-core": "^5.8.22",
-    "babelify": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "del": "^1.2.1",
-    "run-sequence": "^1.1.2",
-    "vinyl-source-stream": "^1.1.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-sourcemaps": "^1.5.2"
+    "run-sequence": "^1.1.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "fecha": "^1.0.0"
