--- a/package.json
+++ b/package.json
@@ -13,17 +13,26 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babelify": "^7.2.0",
-    "browserify": "^11.0.1",
-    "del": "^1.2.1",
-    "gulp": "^3.9.0",
-    "run-sequence": "^1.1.2",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
-    "fecha": "^1.0.0"
+    "babel-core": ">=6.2.1",
+    "babel-eslint": "^4.1.6",
+    "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
+    "babel-preset-es2015": ">=6.1.18",
+    "babelify": ">=7.2.0",
+    "browserify": ">=11.0.1",
+    "circular-json": ">=0.3.0",
+    "cssnext": ">=1.8.4",
+    "del": ">=1.2.1",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
+    "eslint-config-defaults": "^7.1.1",
+    "fecha": ">=1.0.0",
+    "gulp": ">=3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-postcss": ">=6.0.1",
+    "postcss-cssnext": ">=2.3.0",
+    "run-sequence": ">=1.1.2",
+    "vinyl-source-stream": ">=1.1.0"
   }
 }
