--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "eslint-config-defaults": "^7.1.1",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": ">=6.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "lodash": "^3.10.1",
     "postcss-cssnext": ">=2.3.0",
+    "postcss-nested": "^1.0.0",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
