--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-postcss": ">=6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
     "postcss-cssnext": ">=2.3.0",
     "postcss-nested": "^1.0.0",
