--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,6 +18,6 @@
 	"permissions": [
 		"storage"
 	],
-	"web_accessible_resources": ["js/inject.js", "js/*.map"],
+	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map"],
 	"content_security_policy": "img-src 'self' *; default-src; unsafe-inline;"
 }
