--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
+    "mustache": "^2.2.1",
     "postcss-cssnext": ">=2.3.0",
     "postcss-nested": "^1.0.0",
     "run-sequence": ">=1.1.2",
