--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
     "circular-json": ">=0.3.0",
     "config": "^1.17.1",
     "config-browserify": "^1.0.5",
-    "cssnext": ">=1.8.4",
     "del": ">=1.2.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
-    "eslint-config-defaults": "^7.1.1",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
     "gulp-cssnano": "^2.0.0",
@@ -45,6 +41,10 @@
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
-    "vinyl-transform": "^1.0.0"
-  }
+    "vinyl-transform": "^1.0.0",
+    "eslint": "^2.4.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2"
+  },
 }
