--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
     "circular-json": ">=0.3.0",
     "config": "^1.17.1",
     "config-browserify": "^1.0.5",
+    "cssnano": "^3.5.2",
     "del": ">=1.2.1",
+    "eslint": "^2.4.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
-    "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": ">=6.0.1",
+    "gulp-postcss": "^6.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "lodash": "^4.0.0",
     "mustache": "^2.2.1",
-    "postcss-cssnext": ">=2.3.0",
+    "postcss-cssnext": "^2.5.1",
     "postcss-nested": "^1.0.0",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
-    "vinyl-transform": "^1.0.0",
-    "eslint": "^2.4.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2"
-  },
+    "vinyl-transform": "^1.0.0"
+  }
 }
