--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "devDependencies": {
     "async": "^1.5.2",
     "babel-core": ">=6.2.1",
-    "babel-eslint": "^4.1.6",
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
     "babelify": ">=7.2.0",
@@ -25,13 +24,10 @@
     "config-browserify": "^1.0.5",
     "cssnano": "^3.5.2",
     "del": ">=1.2.1",
-    "eslint": "^2.4.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "^2.6.0",
+    "eslint-config-airbnb": "^6.2.0",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
-    "gulp-eslint": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.1.0",
@@ -47,5 +43,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
     "vinyl-transform": "^1.0.0"
+  },
+  "dependencies": {
+    "gulp-eslint": "^2.0.0"
   }
 }
