using airbnb-base for eslint

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "config-browserify": "^1.0.5",
     "cssnano": "^3.5.2",
     "del": ">=1.2.1",
-    "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^6.2.0",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb-base": "^3.0.0",
+    "eslint-plugin-import": "^1.7.0",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
     "gulp-notify": "^2.2.0",
