--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-cssnext": "^2.5.1",
     "postcss-nested": "^1.0.0",
     "promise-each": "^2.2.0",
+    "reuse-promise": "^1.0.1",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
