--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "export NODE_ENV=dev && gulp",
-    "build": "export NODE_ENV=dev && gulp build"
+    "build": "export NODE_ENV=dev && gulp build",
+    "build:prod": "export NODE_ENV=dev && gulp build --type production"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
