emoji panel working :100:

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "dependencies": {
     "gulp-eslint": "^2.0.0",
-    "js-emoji": "github:iamcal/js-emoji#e93c4cb77536964639a344d45639cf7f33cadea7",
-    "needle": "^1.0.0"
+    "js-emoji": "github:iamcal/js-emoji",
+    "needle": "^1.0.0",
+    "postcss-url": "^5.1.2"
   }
 }
