--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "export NODE_ENV=dev && gulp",
     "build": "export NODE_ENV=dev && gulp build",
-    "build:prod": "export NODE_ENV=dev && gulp build --type production"
+    "build:prod": "rm -rf dist/ && export NODE_ENV=dev && gulp build --type production"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
