--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "export NODE_ENV=dev && gulp",
     "build": "export NODE_ENV=dev && gulp build",
-    "build:prod": "rm -rf dist/ && export NODE_ENV=dev && gulp build --type production"
+    "build:prod": "rm -rf dist/ && export NODE_ENV=dev && gulp build --type production",
+    "bs-options": "browser-sync start --server 'dist/options/' --files 'dist/options/**/*'"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
@@ -23,6 +24,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
     "babelify": ">=7.2.0",
+    "browser-sync": "^2.12.10",
     "browserify": ">=11.0.1",
     "config": "^1.17.1",
     "config-browserify": "^1.0.5",
@@ -33,28 +35,28 @@
     "eslint-plugin-import": "^1.7.0",
     "fecha": ">=1.0.0",
     "gulp": ">=3.9.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "jquery": "^2.2.4",
+    "js-emoji": "github:iamcal/js-emoji",
     "lodash": "^4.0.0",
     "mustache": "^2.2.1",
+    "needle": "^1.0.0",
+    "normalize.css": "^4.1.1",
     "postcss-cssnext": "^2.5.1",
     "postcss-import": "^8.1.2",
     "postcss-nested": "^1.0.0",
+    "postcss-url": "^5.1.2",
     "promise-each": "^2.2.0",
     "reuse-promise": "^1.0.1",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
     "vinyl-transform": "^1.0.0"
-  },
-  "dependencies": {
-    "gulp-eslint": "^2.0.0",
-    "js-emoji": "github:iamcal/js-emoji",
-    "needle": "^1.0.0",
-    "postcss-url": "^5.1.2"
   }
 }
