--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,10 @@
 		"tabs",
 		"contextMenus"
 	],
+	"options_ui": {
+		"page": "options/ui/ui.html",
+		"chrome_style": false
+	},
 	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map", "emojis/sheet_twitter_64.png", "emojis/emoji-happy.svg"],
 	"content_security_policy": "img-src 'self' *; default-src; unsafe-inline;"
 }
