--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,5 +28,5 @@
 		"chrome_style": false
 	},
 	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map", "emojis/sheet_twitter_64.png", "emojis/emoji-happy.svg"],
-	"content_security_policy": "img-src 'self' *; default-src; unsafe-inline;"
+	"content_security_policy": "img-src 'self' *; default-src; unsafe-inline; connect-src * https:"
 }
