--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-url": "^5.1.2",
     "prismjs": "^1.5.1",
     "promise-each": "^2.2.0",
+    "query-string": "^4.2.1",
     "reuse-promise": "^1.0.1",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
