--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "jquery": "^3.0.0",
-    "js-emoji": "github:iamcal/js-emoji",
+    "js-emoji": "github:iamcal/js-emoji@3.0.2",
     "lodash": "^4.0.0",
     "mustache": "^2.2.1",
     "needle": "^1.0.0",
