--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "devDependencies": {
-    "async": "^1.5.2",
     "babel-core": ">=6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
@@ -43,7 +42,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "jquery": "^3.0.0",
-    "js-emoji": "github:iamcal/js-emoji@3.0.2",
+    "js-emoji": "git://github.com/iamcal/js-emoji.git#v3.0.2",
     "lodash": "^4.0.0",
     "mustache": "^2.2.1",
     "needle": "^1.0.0",
