:qrt: better video play btn

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,6 +29,6 @@
 		"page": "options/ui/ui.html",
 		"chrome_style": false
 	},
-	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map", "emojis/sheet_twitter_64.png", "emojis/emoji-happy.svg"],
+	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map", "emojis/sheet_twitter_64.png", "emojis/emoji-happy.svg", "icons/controller-play.svg"],
 	"content_security_policy": "img-src 'self' *; default-src; connect-src * https:"
 }
