:cookie: giphy, cloudapp and bandcamp back!

--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
     "vinyl-transform": "^1.0.0"
+  },
+  "dependencies": {
+    "domify": "^1.4.0"
   }
 }
