--- a/src/manifest.json
+++ b/src/manifest.json
@@ -42,5 +42,5 @@
 		"chrome_style": false
 	},
 	"web_accessible_resources": ["js/inject.js", "js/content.js.map", "js/inject.js.map", "js/background.js.map", "emojis/sheet_twitter_64.png", "emojis/emoji-happy.svg", "icons/controller-play.svg", "options/options.html"],
-	"content_security_policy": "img-src 'self' *; default-src; connect-src * https:"
+	"content_security_policy": "img-src 'self' *; default-src; connect-src * https:; style-src 'unsafe-inline'"
 }
