fix build on windows

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "start": "export NODE_ENV=dev && gulp",
-    "build": "export NODE_ENV=dev && gulp build",
-    "build:prod": "rm -rf dist/ && export NODE_ENV=prod && gulp build --type production && zip -qr -9 -X dist.zip dist/",
+    "start": "cross-env NODE_ENV=dev && gulp",
+    "build": "cross-env NODE_ENV=dev && gulp build",
+    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod && gulp build --type production && zip -qr -9 -X dist.zip dist/",
     "bs-options": "browser-sync start --server 'dist/options/' --files 'dist/options/**/*'"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
@@ -62,6 +62,8 @@
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
-    "domify": "^1.4.0"
+    "cross-env": "^2.0.1",
+    "domify": "^1.4.0",
+    "rimraf": "^2.5.4"
   }
 }
