--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "start": "cross-env NODE_ENV=dev && gulp",
     "build": "cross-env NODE_ENV=dev && gulp build",
     "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod && gulp build --type production && zip -qr -9 -X dist.zip dist/",
-    "bs-options": "browser-sync start --server 'dist/options/' --files 'dist/options/**/*'"
+    "pack": "node tools/pack.js"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": ">=6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
     "babelify": ">=7.2.0",
     "browser-sync": "^2.12.10",
     "browserify": ">=11.0.1",
+    "chalk": "^1.1.3",
     "config": "^1.17.1",
     "config-browserify": "^1.0.5",
+    "cross-env": "^2.0.1",
+    "crx": "^3.0.3",
     "cssnano": "^3.5.2",
     "del": ">=1.2.1",
+    "domify": "^1.4.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^3.0.0",
     "eslint-plugin-import": "^1.7.0",
@@ -56,14 +60,10 @@
     "promise-each": "^2.2.0",
     "query-string": "^4.2.1",
     "reuse-promise": "^1.0.1",
+    "rimraf": "^2.5.4",
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
     "vinyl-transform": "^1.0.0"
-  },
-  "dependencies": {
-    "cross-env": "^2.0.1",
-    "domify": "^1.4.0",
-    "rimraf": "^2.5.4"
   }
 }
