--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
     "babelify": ">=7.2.0",
+    "brfs": "^1.4.3",
     "browser-sync": "^2.12.10",
     "browserify": ">=11.0.1",
     "chalk": "^1.1.3",
