--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=dev && gulp",
-    "build": "cross-env NODE_ENV=dev && gulp build",
-    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod && gulp build --type production && zip -qr -9 -X packed/dist.zip dist/",
+    "start": "cross-env NODE_ENV=dev gulp",
+    "build": "cross-env NODE_ENV=dev gulp build",
+    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod gulp build --type production && zip -qr -9 -X packed/dist.zip dist/",
     "pack": "node tools/pack.js",
     "release": "npm run build:prod && npm run pack"
   },
