--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=dev gulp",
     "build": "cross-env NODE_ENV=dev gulp build",
-    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod gulp build --type production && zip -qr -9 -X packed/dist.zip dist/",
+    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod gulp build --type production && bestzip packed/dist.zip dist/",
     "pack": "node tools/pack.js",
     "release": "npm run build:prod && npm run pack"
   },
@@ -24,6 +24,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": ">=6.2.0",
     "babel-preset-es2015": ">=6.1.18",
     "babelify": ">=7.2.0",
+    "bestzip": "^1.1.3",
     "brfs": "^1.4.3",
     "browser-sync": "^2.12.10",
     "browserify": ">=11.0.1",
