:ledger: add author infos to package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/eramdam/BetterTweetDeck.git"
   },
-  "author": "",
+  "author": "Damien Erambert",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
