add support of TINAMI
[TINAMI](https://tinami.com) is one of famous Japanese illustration community for fans of anime and comics like Pixiv.

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "run-sequence": ">=1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": ">=1.1.0",
-    "vinyl-transform": "^1.0.0"
+    "vinyl-transform": "^1.0.0",
+    "xml-js": "^1.0.0"
   }
 }
