--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BetterTweetDeck",
-  "version": "3.2.2",
+  "version": "3.3.0",
   "description": "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
   "repository": {
     "type": "git",
@@ -41,6 +41,8 @@
     "eslint-config-airbnb-base": "^3.0.0",
     "eslint-plugin-import": "^1.7.0",
     "fecha": ">=1.0.0",
+    "file-saver": "^1.3.3",
+    "gifshot": "^0.3.2",
     "gulp": ">=3.9.0",
     "gulp-eslint": "^2.0.0",
     "gulp-notify": "^2.2.0",
