:package: add npm scripts to build chrome/firefox versions

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "scripts": {
     "start": "cross-env NODE_ENV=dev gulp",
     "build": "cross-env NODE_ENV=dev gulp build",
-    "build:prod": "rimraf dist/ && cross-env NODE_ENV=prod gulp build --type production && bestzip packed/dist.zip dist/",
-    "pack": "node tools/pack.js",
-    "release": "npm run build:prod && npm run pack",
+    "chrome": "cross-env NODE_ENV=prod gulp build --browser chrome",
+    "chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
+    "firefox": "cross-env NODE_ENV=prod gulp build --browser firefox",
+    "firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
+    "pack:chrome-opera": "node tools/pack.js",
+    "pack:firefox": "web-ext build -s dist -a artifacts",
+    "release": "npm run chrome:prod && npm run pack:chrome-opera && npm run firefox:prod && npm run pack:firefox",
     "test": "gulp lint && npm run release"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
@@ -51,6 +55,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "gulp-zip": "^4.0.0",
     "jquery": "^3.0.0",
     "js-emoji": "https://github.com/iamcal/js-emoji/tarball/v3.0.2",
     "lodash": "^4.0.0",
