:ledger: update scripts and CONTRIBUTING.md docs

--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=dev gulp",
+    "start:chrome": "cross-env NODE_ENV=dev gulp --browser chrome",
+    "start:firefox": "cross-env NODE_ENV=dev gulp --browser firefox",
     "build": "cross-env NODE_ENV=dev gulp build",
-    "chrome": "cross-env NODE_ENV=prod gulp build --browser chrome",
-    "chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
-    "firefox": "cross-env NODE_ENV=prod gulp build --browser firefox",
-    "firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
+    "build:chrome": "cross-env NODE_ENV=dev gulp build --browser chrome",
+    "build:firefox": "cross-env NODE_ENV=dev gulp build --browser firefox",
+    "build:chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
+    "build:firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
     "pack:chrome": "node tools/pack.js",
     "pack:firefox": "web-ext build -s dist -a artifacts",
-    "release": "npm run chrome:prod && npm run pack:chrome && npm run firefox:prod && npm run pack:firefox",
+    "release": "npm run build:chrome:prod && npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
+    "release:firefox": "npm run firefox:prod && npm run pack:firefox",
+    "release:chrome": "npm run chrome:prod && npm run pack:chrome",
     "test": "gulp lint && npm run release"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
