--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BetterTweetDeck",
-  "version": "3.3.3",
+  "version": "3.3.4",
   "description": "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
   "repository": {
     "type": "git",
@@ -23,8 +23,8 @@
     "pack:chrome": "node tools/pack.js",
     "pack:firefox": "web-ext build -s dist -a artifacts",
     "release": "npm run build:chrome:prod && npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
-    "release:firefox": "npm run firefox:prod && npm run pack:firefox",
-    "release:chrome": "npm run chrome:prod && npm run pack:chrome",
+    "release:firefox": "npm run build:firefox:prod && npm run pack:firefox",
+    "release:chrome": "npm run build:chrome:prod && npm run pack:chrome",
     "test": "gulp lint && npm run release"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
