--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "pack:chrome": "node tools/pack.js",
     "pack:firefox": "web-ext build -s dist -a artifacts",
     "release": "npm run build:chrome:prod && npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
-    "release:firefox": "npm run build:firefox:prod && npm run pack:firefox",
+    "release:firefox": "npm run build:firefox:prod && npm run pack:firefox && rimraf artifacts/dist-firefox.zip",
     "release:chrome": "npm run build:chrome:prod && npm run pack:chrome",
     "test": "gulp lint && npm run release"
   },
