--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "pack:firefox": "web-ext build -s dist -a artifacts",
     "release": "npm run build:chrome:prod && npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
     "release:firefox": "npm run build:firefox:prod && npm run pack:firefox && rimraf artifacts/dist-firefox.zip",
-    "release:chrome": "npm run build:chrome:prod && npm run pack:chrome",
+    "release:chrome": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome",
     "test": "gulp lint && npm run release"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
