--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cssnano": "^3.5.2",
     "del": ">=1.2.1",
     "domify": "^1.4.0",
+    "emoji-js": "^3.2.2",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^3.0.0",
     "eslint-plugin-import": "^1.7.0",
@@ -63,7 +64,6 @@
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
     "jquery": "^3.0.0",
-    "js-emoji": "https://github.com/iamcal/js-emoji/tarball/v3.2.2",
     "lodash": "^4.0.0",
     "marked": "^0.3.6",
     "mustache": "^2.2.1",
