--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "brfs": "1.4.3",
     "browserify": "14.4.0",
     "chalk": "1.1.3",
+    "clipboard": "^1.7.1",
     "config": "1.26.1",
     "config-browserify": "1.0.5",
     "cross-env": "5.0.1",
