:package: fix config env when running pack: commands

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build:firefox": "cross-env NODE_ENV=dev gulp build --browser firefox",
     "build:chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
     "build:firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
-    "pack:chrome": "node tools/pack.js",
-    "pack:firefox": "web-ext build -s dist -a artifacts",
+    "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
+    "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
     "release": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
     "release:firefox": "npm run build:firefox:prod && npm run pack:firefox && rimraf artifacts/dist-firefox.zip",
     "release:chrome": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome",
