--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 dist/
 artifacts/*
-config/*.js
+config/dev.js
+config/prod.js
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
