--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
   "devDependencies": {
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "stylelint": "^8.1.0",
+    "stylelint-config-standard": "^17.0.0"
   }
 }
