--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "release:chrome": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome",
     "lint": "eslint . && stylelint src/**/*.css",
     "test": "npm run lint && npm run release",
-    "update_emojis": "node tools/update_emojis.js"
+    "update_emojis": "node tools/update_emojis.js",
+    "prepush": "npm run lint"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
@@ -89,6 +90,7 @@
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "husky": "^0.14.3",
     "stylelint": "^8.1.0",
     "stylelint-config-standard": "^17.0.0"
   }
