--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "cssnano": "3.10.0",
     "del": "3.0.0",
     "domify": "1.4.0",
+    "dompurify": "^1.0.2",
     "emoji-js": "3.2.2",
-    "escape-html": "^1.0.3",
     "fecha": ">=1.0.0",
     "file-saver": "1.3.3",
     "gifshot": "git://github.com/yahoo/gifshot.git#0.4.4",
