--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vinyl-source-stream": "1.1.0",
     "vinyl-transform": "1.0.0",
     "web-ext": "1.9.1",
+    "webpack": "^3.8.1",
     "xml-js": "1.3.2"
   },
   "devDependencies": {
