--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-    "babel-core": "6.25.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babelify": "7.3.0",
     "bestzip": "1.1.4",
