--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "brfs": "1.4.3",
     "browserify": "14.4.0",
     "chalk": "1.1.3",
+    "clean-webpack-plugin": "^0.1.17",
     "clipboard": "^1.7.1",
     "config": "1.26.1",
     "config-browserify": "1.0.5",
@@ -57,6 +58,7 @@
     "emoji-js": "3.2.2",
     "fecha": ">=1.0.0",
     "file-saver": "1.3.3",
+    "generate-json-webpack-plugin": "^0.2.2",
     "gifshot": "git://github.com/yahoo/gifshot.git#0.4.4",
     "gulp": ">=3.9.0",
     "gulp-eslint": "4.0.0",
