--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "copy-webpack-plugin": "^4.2.0",
     "cross-env": "5.0.1",
     "crx": "3.2.1",
+    "css-loader": "^0.28.7",
     "cssnano": "3.10.0",
     "del": "3.0.0",
     "domify": "1.4.0",
     "dompurify": "^1.0.2",
     "emoji-js": "3.2.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fecha": ">=1.0.0",
     "file-saver": "1.3.3",
     "generate-json-webpack-plugin": "^0.2.2",
@@ -78,14 +80,17 @@
     "normalize.css": "7.0.0",
     "postcss-cssnext": "2.11.0",
     "postcss-import": "10.0.0",
+    "postcss-loader": "^2.0.8",
     "postcss-nested": "2.0.2",
     "postcss-url": "7.0.0",
     "prismjs": "1.6.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "promise-each": "2.2.0",
     "query-string": "4.3.4",
     "reuse-promise": "1.1.0",
     "rimraf": "2.6.1",
     "run-sequence": "1.2.2",
+    "style-loader": "^0.19.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "vinyl-transform": "1.0.0",
