--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "rimraf": "2.6.1",
     "run-sequence": "1.2.2",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "vinyl-transform": "1.0.0",
