--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "vinyl-transform": "1.0.0",
     "web-ext": "1.9.1",
     "webpack": "^3.8.1",
-    "xml-js": "1.3.2"
+    "xml-js": "1.3.2",
+    "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^4.6.1",
