--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dist/
 artifacts/*
 config/dev.js
 config/prod.js
+config/*.json
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
